idea/testData/script/definition/highlighting/doNotSpeakAboutJavaLegacy/script.kts
val <error descr="Can't use">java = "j"</error>
val <warning descr="Shouldn't use">scala = "s"</warning>

val result = <error descr="Can't use">java +</error>
<warning descr="Shouldn't use">scala</warning>